--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
     "readline.h": "c",
     "minishell.h": "c",
     "history.h": "c",
-    "stdio.h": "c"
+    "stdio.h": "c",
+    "libft.h": "c"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
