--- a/utils/libft/Makefile
+++ b/utils/libft/Makefile
@@ -37,7 +37,8 @@ SRCS = ft_isalpha.c\
 	  print_helpers.c\
 	  ft_printf.c\
 	  get_next_line_bonus.c\
-	  get_next_line_utils_bonus.c
+	  get_next_line_utils_bonus.c\
+	  destroy_2d.c
 
 BONUS = ft_lstnew_bonus.c\
 	ft_lstadd_front_bonus.c\
