envs and fix validations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,22 @@
     "history.h": "c",
     "stdio.h": "c",
     "libft.h": "c",
-    "ranges": "c"
+    "ranges": "c",
+    "array": "c",
+    "string_view": "c",
+    "initializer_list": "c",
+    "span": "c",
+    "utility": "c",
+    "deque": "c",
+    "string": "c",
+    "unordered_map": "c",
+    "vector": "c",
+    "optional": "c",
+    "ostream": "c",
+    "system_error": "c",
+    "functional": "c",
+    "tuple": "c",
+    "type_traits": "c"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
