--- a/utils/libft/Makefile
+++ b/utils/libft/Makefile
@@ -39,7 +39,10 @@ SRCS = ft_isalpha.c\
 	  ft_printf.c\
 	  get_next_line_bonus.c\
 	  get_next_line_utils_bonus.c\
-	  destroy_2d.c
+	  destroy_2d.c\
+	  hashmap.c\
+	  hashmap_utils.c\
+	  key_value.c
 
 BONUS = ft_lstnew_bonus.c\
 	ft_lstadd_front_bonus.c\
