--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,8 @@
     "system_error": "c",
     "functional": "c",
     "tuple": "c",
-    "type_traits": "c"
+    "type_traits": "c",
+    "compare": "c"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
