--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,8 @@
     "functional": "c",
     "tuple": "c",
     "type_traits": "c",
-    "compare": "c"
+    "compare": "c",
+    "streambuf": "c"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
