--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,30 +1,31 @@
 {
   "files.associations": {
-    "stdlib.h": "c",
-    "readline.h": "c",
-    "minishell.h": "c",
-    "history.h": "c",
-    "stdio.h": "c",
-    "libft.h": "c",
-    "ranges": "c",
-    "array": "c",
-    "string_view": "c",
-    "initializer_list": "c",
-    "span": "c",
-    "utility": "c",
-    "deque": "c",
-    "string": "c",
-    "unordered_map": "c",
-    "vector": "c",
-    "optional": "c",
-    "ostream": "c",
-    "system_error": "c",
-    "functional": "c",
-    "tuple": "c",
-    "type_traits": "c",
-    "compare": "c",
-    "streambuf": "c"
-  },
+		"stdlib.h": "c",
+		"readline.h": "c",
+		"minishell.h": "c",
+		"history.h": "c",
+		"stdio.h": "c",
+		"libft.h": "c",
+		"ranges": "c",
+		"array": "c",
+		"string_view": "c",
+		"initializer_list": "c",
+		"span": "c",
+		"utility": "c",
+		"deque": "c",
+		"string": "c",
+		"unordered_map": "c",
+		"vector": "c",
+		"optional": "c",
+		"ostream": "c",
+		"system_error": "c",
+		"functional": "c",
+		"tuple": "c",
+		"type_traits": "c",
+		"compare": "c",
+		"streambuf": "c",
+		"types.h": "c"
+	},
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
   "C_Cpp_Runner.debuggerPath": "gdb",
