--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,8 @@
     "tuple": "c",
     "type_traits": "c",
     "compare": "c",
-    "streambuf": "c"
+    "streambuf": "c",
+    "limits.h": "c"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
